[package]
name = "lab2_sec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8.6"
regex = "1.5"
serde_json = "1.0.80"
serde = { version = "1.0.103", features = ["derive"] }
rsa = "0.6.1"
rand = "0.8.3"
rust-argon2 = "1.0"
aes-gcm = "0.9.4"
sha2 = "0.10.2"
pkcs1 = { version="0.3.3" }
hmac = "0.12.1"
vectorize = "0.2.0"
colorful = "0.2.1"